Logo assets addeD

--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -12,6 +12,13 @@ $color-overlay: $white;
 $color-background-overlay: rgba(0, 0, 0, $alpha-slight-transparent);
 $color-box-background: #ddedfd;
 
+$color-black: #000000;
+$color-white: #ffffff;
+$color-corporate-orange: #FD6721;
+$color-corporate-blue: #010764;
+$color-corporate-grey: #8B8B8B;
+$color-corporate-offset-blue: #002B42;
+
 /* --- Spacing --- */
 $spacing-small: 0.5rem;
 $spacing-medium: 1rem;
