--- a/static/src/assets/scss/pages/_news.scss
+++ b/static/src/assets/scss/pages/_news.scss
@@ -5,10 +5,12 @@ $news-article-height: $news-primary-article-height / 2;
 .news {
   h1 {
     text-align: center;
+    margin-bottom: $spacing-large;
   }
 }
 
 .articles {
+
     .article {
         height: $news-article-height;
         text-align: center;
@@ -21,6 +23,7 @@ $news-article-height: $news-primary-article-height / 2;
         h1 {
             text-align: left;
             font-size: $font-size-header;
+            margin-bottom: 0;
         }
 
         img {
@@ -64,4 +67,17 @@ $news-article-height: $news-primary-article-height / 2;
             font-weight: bold;
         }
     }
+}
+
+.pagination {
+  text-align: center;
+
+  a {
+    display: inline-block;
+  }
+
+  span {
+    border: $border-primary;
+    padding: $spacing-small $spacing-medium;
+  }
 }
