--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -62,6 +62,8 @@
 @import './components/dl';
 @import './components/latest-news';
 @import './components/section';
+@import './components/pagination';
+@import './components/articles';
 
 @import './pages/index';
 @import './pages/staff';
