--- a/static/src/assets/scss/components/_image-card.scss
+++ b/static/src/assets/scss/components/_image-card.scss
@@ -26,7 +26,7 @@ $card-height: 400px;
     display: block;
     background-color: $image-hover-wrapper-banner-bg;
     color: $white;
-    font-weight: $font-weight-bold;
+    font-weight: bold;
     bottom: 0;
     left: 0;
     padding: $spacing-small;
@@ -59,5 +59,3 @@ $card-height: 400px;
     opacity: 1.0;
   }
 }
-
-
