contact sass before merge

--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -49,7 +49,6 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
-@import './components/news';
 
 // Project-specific items
 @import 'custom-settings';
@@ -58,5 +57,7 @@
 @import './components/qualifications';
 @import './components/footer';
 
+
 @import './pages/index';
 @import './pages/staff';
+@import './pages/contact';
