--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -1,4 +1,11 @@
 /* ---------- _custom-settings.scss ---------- */
+$color-black: #000000;
+$color-white: #ffffff;
+$color-corporate-orange: #FD6721;
+$color-corporate-blue: #010764;
+$color-corporate-grey: #8B8B8B;
+$color-corporate-offset-blue: #002B42;
+
 /* --- Colors --- */
 $alpha-transparent: 0.0;
 $alpha-heavy-transparent: 0.3;
@@ -10,14 +17,9 @@ $color-primary: #000000;
 $color-secondary: $white;
 $color-overlay: $white;
 $color-background-overlay: rgba(0, 0, 0, $alpha-slight-transparent);
-$color-box-background: #ddedfd;
-
-$color-black: #000000;
-$color-white: #ffffff;
-$color-corporate-orange: #FD6721;
-$color-corporate-blue: #010764;
-$color-corporate-grey: #8B8B8B;
-$color-corporate-offset-blue: #002B42;
+$color-grey-box-background: rgba(139, 139, 139, 0.2);
+$color-blue-box-background: rgba(1, 7, 100, 0.6);
+$color-blue-box-background-light: rgba(1, 7, 100, 0.1);
 
 /* --- Spacing --- */
 $spacing-small: 0.5rem;
@@ -27,10 +29,11 @@ $spacing-huge: 4rem;
 
 /* --- Hero --- */
 $hero-height: 20rem;
+$hero-image-width: 25rem;
 
 /* --- Borders --- */
 $border-primary: 1px solid $color-primary;
-$border-subtle: 1px solid $color-box-background;
+$border-subtle: 1px solid $color-blue-box-background-light;
 
 /* --- Typography --- */
 $font-size-title: rem-calc(25);
