--- a/static/src/assets/scss/components/_hero.scss
+++ b/static/src/assets/scss/components/_hero.scss
@@ -7,12 +7,22 @@
   min-height: $hero-height;
 
   .row {
-    padding-top: $hero-height * 0.5;
-    padding-bottom: $hero-height * 0.5;
+    padding-top: $hero-height * 0.20;
+    padding-bottom: $hero-height * 0.20;
   }
 
   h1, p {
     color: $white;
   }
 
+  img {
+    max-width: $hero-image-width;
+  }
+
+  .box {
+    background-color: $color-blue-box-background !important;
+  }
+
 }
+
+
