--- a/static/src/assets/scss/pages/_index.scss
+++ b/static/src/assets/scss/pages/_index.scss
@@ -5,3 +5,10 @@
     margin-bottom: $spacing-huge;
   }
 }
+
+.home.hero {
+  h1 {
+    margin-top: $spacing-large;
+    font-size: $font-size-title;
+  }
+}
