--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -18,6 +18,7 @@ $color-secondary: $white;
 $color-overlay: $white;
 $color-background-overlay: rgba(0, 0, 0, $alpha-slight-transparent);
 $color-grey-box-background: rgba(139, 139, 139, 0.2);
+$color-grey-box-background-light: rgba(139, 139, 139, 0.1);
 $color-blue-box-background: rgba(1, 7, 100, 0.6);
 $color-blue-box-background-light: rgba(1, 7, 100, 0.1);
 
