--- a/static/src/assets/scss/components/_latest-news.scss
+++ b/static/src/assets/scss/components/_latest-news.scss
@@ -1,6 +1,7 @@
 /* ---------- _latest-news.scss ---------- */
 
 .latest-news {
+  padding-bottom: $spacing-large;
 
   .card {
     position: relative;
