--- a/static/src/assets/scss/components/_section.scss
+++ b/static/src/assets/scss/components/_section.scss
@@ -3,3 +3,7 @@
   border-top: $border-subtle;
   padding-top: $spacing-large;
 }
+
+section.box {
+  background-color: $color-grey-box-background-light;
+}
