--- a/static/src/assets/scss/pages/_sponsors.scss
+++ b/static/src/assets/scss/pages/_sponsors.scss
@@ -1,36 +1,39 @@
 /* ---------- _sponsors.scss ---------- */
 .sponsors {
-  h1 {
-    text-align: center;
-  }
+    h1 {
+        text-align: center;
+    }
 
-  p {
-    text-align: center;
-    margin-bottom: $spacing-large;
-  }
+    p {
+        text-align: center;
+        margin-bottom: $spacing-large;
+    }
 }
 
 .sponsor {
-  border-bottom: $border-primary;
-  padding: $spacing-medium;
+    border-bottom: $border-primary;
+    padding: $spacing-medium;
 
-  &:last-child {
-    border-bottom: none;
-  }
+    &:last-child {
+        border-bottom: none;
+    }
 
-  div {
-    text-align: center;
-  }
+    img {
+      padding: $spacing-medium;
+    }
 
-  h2 {
-    text-align: left;
-    font-size: $font-size-title;
-  }
+    div {
+        text-align: center;
+    }
 
-  p {
-    text-align: left;
-    font-size: $font-size-content;
-    margin-bottom: 0;
-  }
+    h2 {
+        text-align: left;
+        font-size: $font-size-title;
+    }
 
+    p {
+        text-align: left;
+        font-size: $font-size-content;
+        margin-bottom: $spacing-small;
+    }
 }
