--- a/static/src/partials/articles.html
+++ b/static/src/partials/articles.html
@@ -1,4 +1,4 @@
-<div class="large-6 medium-12 columns primary">
+<div class="large-6 medium-12 columns feature">
     <img src="http://placehold.it/300x300" />
     <h1>Firm Takes Skills Rein</h1>
     <p>
