--- a/static/src/partials/pagination.html
+++ b/static/src/partials/pagination.html
@@ -1,9 +1,9 @@
 <section class="pagination">
     <div class="row">
-        <a href="#"><span>1</span></a>
-        <a href="#"><span>2</span></a>
-        <a href="#"><span>3</span></a>
-        <a href="#"><span>4</span></a>
-        <a href="#"><span>Next</span></a>
+        <a href="#" class="button large">1</a>
+        <a href="#" class="hollow button large">2</a>
+        <a href="#" class="hollow button large">3</a>
+        <a href="#" class="hollow button large">4</a>
+        <a href="#" class="hollow button large">Next</a>
     </div>
 </section>
