added article page reference

--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -64,10 +64,10 @@
 @import './components/section';
 @import './components/pagination';
 @import './components/articles';
-@import './components/article';
 
 @import './pages/index';
 @import './pages/staff';
 @import './pages/about';
 @import './pages/training';
 @import './pages/news';
+@import './pages/article';
