replaced placholder image

--- a/static/src/assets/scss/pages/_article.scss
+++ b/static/src/assets/scss/pages/_article.scss
@@ -1,5 +1,5 @@
 .article-hero {
-    background: url('https://images.pexels.com/photos/208826/pexels-photo-208826.jpeg?w=940&h=650&auto=compress&cs=tinysrgb') 50% no-repeat;
+    background: url('https://www.placehold.it/1920x320') 50% no-repeat;
     background-size: cover;
     height: $hero-height;
     text-align: center;
