--- a/static/src/assets/scss/pages/_shop.scss
+++ b/static/src/assets/scss/pages/_shop.scss
@@ -1,25 +1,39 @@
 /* ---------- _shop.scss ---------- */
 .button.round {
-  border-radius: 1000px;
+    border-radius: 1000px;
 }
 
 .products-header {
-  text-align: center;
-  h1 {
-    margin-bottom: $spacing-large;
-  }
+    text-align: center;
 
-  .categories {
-    list-style: none;
-
-    li {
-      display: inline-block;
-      margin-right: $spacing-medium;
-
-      :last-child {
-        margin-right: 0;
-      }
+    h1 {
+        margin-bottom: $spacing-large;
     }
-  }
 
+    .categories {
+        list-style: none;
+
+        li {
+            display: inline-block;
+            margin-right: $spacing-medium;
+
+            :last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+.image.card .price {
+    font-size: $font-size-subtitle;
+    display: block;
+    color: $white;
+    bottom: -40px;
+    left: 0;
+    padding: $spacing-small;
+    position: absolute;
+    min-height: $image-hover-title-min-height;
+    width: $image-hover-wrapper-banner-width;
+    z-index: $image-hover-title-z-index;
+    pointer-events: none;
 }
