--- a/static/src/assets/scss/pages/_contact.scss
+++ b/static/src/assets/scss/pages/_contact.scss
@@ -1,13 +1,10 @@
 /* ---------- _contact.scss ---------- */
 .contact-form{
 	padding-top: $spacing-large;
-	label{
-		display: -webkit-inline-box;
-	}
 }
 
 .contact-list{
-	margin-top: 2rem;
+	margin-top: $spacing-large;
 	border-top: $border-primary;
 	list-style: none;
 	margin-left: 0;
@@ -15,9 +12,6 @@
 		border-bottom: $border-primary;
 		font-size: $font-size-subtext;
 		padding: $spacing-small;
-	}
-	dd{
-		padding-left: 40px;
 	}
 }
 .map-row{
