--- a/static/src/partials/products.html
+++ b/static/src/partials/products.html
@@ -52,11 +52,11 @@
 
 <div class="large-6 medium-12 columns" data-equalizer-watch>
     <div class="card event">
-        <h2>Toomby Rodeo</h2>
-        <p>
+        <h2 class="title">Toomby Rodeo</h2>
+        <p class="description">
             North Queensland Elite Rodeo is an invitational only event putting the very best rodeo athletes against the best animals in the country.
         </p>
-        <a href="#" href="button primary">Find Out More</a>
+        <a href="#" class="button large">Find Out More</a>
     </div>
 </div>
 
