Added subtle border to event

--- a/static/src/assets/scss/pages/_shop.scss
+++ b/static/src/assets/scss/pages/_shop.scss
@@ -31,6 +31,7 @@ $shop-item-card-price-top: $shop-item-card-description-top + 15%;
       padding: 0;
       text-align: center;
       padding: $spacing-large;
+      border: $border-subtle;
 
       .title {
         margin-top: $spacing-large;
