--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -49,6 +49,10 @@ $definition-width: 100%;
 $definition-term-width: 20%;
 $definition-description-width: 80%;
 
+/* --- Media Query Sizes --- */
+$media-query-size-tablet: 64em;
+$media-query-size-mobile: 40em;
+
 /* ##### Global Styles ##### */
 * {
   box-sizing: border-box;
