--- a/static/src/assets/scss/pages/_item.scss
+++ b/static/src/assets/scss/pages/_item.scss
@@ -1,7 +1,6 @@
 /* ---------- _item.scss ---------- */
 $primary-product-img-height: 65%;
 $primary-product-img-width: $primary-product-img-height;
-
 $mobile-image-height: 200px;
 $mobile-image-width: $mobile-image-height;
 
@@ -44,24 +43,13 @@ $mobile-image-width: $mobile-image-height;
         font-weight: bold;
     }
 
-    .mobile-only {
-        display: none;
-        @media only screen and (max-width: $media-query-size-tablet) {
+    .show-for-small-only {
+        img {
             display: block;
-            text-align: center;
-
-            img {
-                max-width: $mobile-image-height;
-                max-height: $mobile-image-height;
-                margin-bottom: $spacing-medium;
-            }
+            max-width: $mobile-image-height;
+            max-height: $mobile-image-height;
+            margin: 0 auto $spacing-medium;
         }
-    }
-
-    .no-mobile {
-      @media only screen and (max-width: $media-query-size-tablet) {
-        display: none;
-      }
     }
 }
 
@@ -89,8 +77,7 @@ $mobile-image-width: $mobile-image-height;
 
 .product-information {
     border-top: $border-subtle;
-    padding: $spacing-small;
-    padding-top: $spacing-large;
+    padding: $spacing-large $spacing-small $spacing-small;
 
     h2 {
         font-size: $font-size-content;
