--- a/static/src/assets/scss/pages/_training.scss
+++ b/static/src/assets/scss/pages/_training.scss
@@ -40,7 +40,12 @@
       font-weight: bold;
     }
   }
-
+  .image.card.preview{
+    height: 100%;
+    img{
+      height: initial;
+    }
+  }
   .faq {
     h3 {
       text-align: center;
