--- a/themes/toomby/templates/base.twig
+++ b/themes/toomby/templates/base.twig
@@ -40,5 +40,7 @@
 			</footer>
 			{{ function('wp_footer') }}
 		{% endblock %}
+
+		<script src="{{site.theme.link}}/dist/assets/js/app.js"></script>
 	</body>
 </html>
