--- a/themes/toomby/templates/footer.twig
+++ b/themes/toomby/templates/footer.twig
@@ -11,32 +11,7 @@
     </div>
     <div class="large-3 medium-6 columns end">
         {% include "footer/menu.twig" with {'menu': footer_right_menu} %}
-
-        {% if site_options.facebook_url or site_options.twitter_url or site_options.linkedin_url %}
-        <h5>Social Media</h5>
-        {% endif %}
-
-        {% if site_options.facebook_url %}
-        <a href="{{ site_options.facebook_url }}" title="Find us on Facebook">
-            <i class="fa fa-facebook"></i>
-            Facebook
-        </a>
-        {% endif %}
-
-        {% if site_options.twitter_url %}
-        <a href="{{ site_options.twitter_url }}" title="Follow us on Twitter">
-            <i class="fa fa-twitter"></i>
-            Twitter
-        </a>
-        {% endif %}
-
-        {% if site_options.linkedin_url %}
-        <a href="{{ site_options.linkedin_url }}" title="Connect with us on LinkedIn">
-            <i class="fa fa-linkedin"></i>
-            LinkedIn
-        </a>
-        {% endif %}
-
+        {% include "footer/social-media.twig" %}
     </div>
 </div>
 <div class="row medium-text-center text-center">
