--- a/themes/toomby/style.css
+++ b/themes/toomby/style.css
@@ -1,5 +1,12 @@
 /*
- * Theme Name: My Timber Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
-*/
+ * Theme Name: Toomby
+ * Theme URI: https://github.com/CP3402-2017-1/a2-cp3402-2017-team24
+ * Description: A Website theme  developed as an assignment for 17-CP3402-TSV-INT-SP1; doubling as a theme for Toomby Horsemanship
+ *
+ * Version: 1.0
+ *
+ * Author: Robertson, Lachlan | Scott, Alexander | Sedgman, Dale
+ * Author URI: https://github.com/lrobert142 | https://github.com/axrs | https://github.com/sedgy
+ *
+ * Tags: CP3402, toomby, horsemanship, theme, orange, blue, foundation, acf, advanced, custom, fields, responsive
+ */
