Pull in other staff members

--- a/static/src/assets/scss/components/_staff-card.scss
+++ b/static/src/assets/scss/components/_staff-card.scss
@@ -2,5 +2,9 @@
 $staff-card-height: 300px;
 
 .image.card.staff {
-    height: $staff-card-height;
+  height: $staff-card-height;
+}
+
+.large-offset-1-5 {
+  margin-left: 12.5%;
 }
