--- a/themes/toomby/templates/page-contact.twig
+++ b/themes/toomby/templates/page-contact.twig
@@ -53,7 +53,7 @@
 	    </div>
 	</section>
 	<section class="map-section">
-		{# ToDo #}
+		{# ToDo
 	    <div class="row map-row">
 	        <h3>Where to find us</h3>
 	        <div class="column map" id="map"></div>
@@ -88,4 +88,4 @@
 	        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&callback=initMap" async defer></script>
 	    </div>
 	</section>
-{% endblock %}
+{% endblock %} #}
