Updated CSS for article to allow text to natural flow around the image

--- a/static/src/assets/scss/pages/_article.scss
+++ b/static/src/assets/scss/pages/_article.scss
@@ -17,8 +17,11 @@
         padding-bottom: $spacing-small;
     }
     img {
-        display: block;
-        margin: 0 auto;
+        display: inline;
+        float: left;
+        margin-right: $spacing-large;
         margin-bottom: $spacing-large;
+        max-width: 40%;
+        height: auto;
     }
 }
