--- a/themes/toomby/templates/single-article.twig
+++ b/themes/toomby/templates/single-article.twig
@@ -8,7 +8,7 @@
     <div class="row">
         <div>
           <img src="{{ TimberImage(post.custom.image).src }}" class="thumbnail" alt="{{ TimberImage(post.custom.image).alt }}">
-          {{ post.custom.content | wpautop }}
+          {{ post.content | wpautop }}
         </div>
     </div>
 </section>
