--- a/themes/toomby/templates/page-about-us.twig
+++ b/themes/toomby/templates/page-about-us.twig
@@ -1,1 +1,33 @@
-<h1>Todo</h1>
+{% extends "base.twig" %}
+
+{% block content %}
+<section class="about-us">
+    <div class="row">
+        <h1>{{ post.title }}</h1>
+        <div class="{% if post.image %} large-8 {% endif %} columns">
+            {{ post.content }}
+        </div>
+        {% if post.image %}
+        <div class="large-4 columns">
+            {{ post.content }}
+        </div>
+        {% endif %}
+    </div>
+</section>
+<section class="our-goals">
+    <div class="row">
+        <h2>Our Vision, Mission & Values</h2>
+
+        {% for v in site_options.values %}
+        <div class="large-6 columns goal">
+            <h3>{{ v.title }}</h3>
+            {{ v.description | wpautop }}
+        </div>
+        {% endfor %}
+
+    </div>
+</section>
+{{ post | print_r }}
+{% include "sections/other-staff.twig" with {'staff' : related} %}
+{% endblock %}
+
