Article card init

--- a/themes/toomby/templates/single-article.twig
+++ b/themes/toomby/templates/single-article.twig
@@ -13,36 +13,6 @@
     </div>
 </section>
 
-<!-- TODO Move this to its own component -->
-<section class="latest-news section box" data-equalizer data-equalize-on="medium">
-    <div class="row">
-        <h2>Related News</h2>
-        <div class="medium-4 columns card" data-equalizer-watch>
-            <div class="card-section">
-                <span class="date">11 April 2017</span>
-                <h3>You Wont Believe this thing!</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more</a>
-            </div>
-        </div>
-        <div class="medium-4 columns card" data-equalizer-watch>
-            <div class="card-section">
-                <span class="date">11 April 2017</span>
-                <h3>You Wont Believe this thing!</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more</a>
-            </div>
-        </div>
-        <div class="medium-4 columns card" data-equalizer-watch>
-            <div class="card-section">
-                <span class="date">11 April 2017</span>
-                <h3>You Wont Believe this thing!</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more</a>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- TODO Move this to its own component -->
+{% include "sections/article-card.twig" %}
 
 {% endblock %}
