--- a/themes/toomby/templates/page-contact.twig
+++ b/themes/toomby/templates/page-contact.twig
@@ -40,43 +40,67 @@
 	                	{{site.admin_email}}
 	                	</a>
 	            	</dd>
+
+	            	{% if site_options.postal_address %}
 	                <dt>Postal Address:</dt>
 	                <dd>{{site_options.postal_address}}</dd>
+	            	{% endif %}
+
+	            	{% if site_options.phone_numbers %}
 	                <dt>Phone Numbers:</dt>
 	                <dd>				
 					{% for number in site_options.phone_numbers%}
-					<strong>{{number.name}}</strong>{{number.phone}}<br>
+					<strong>{{number.name}}</strong> {{number.phone}}<br>
 					{% endfor %}
 	                </dd>
+	            	{% endif %}
+
 	            </dl>
 	        </div>
 	    </div>
 	</section>
 	<section class="map-section">
-		{# ToDo
 	    <div class="row map-row">
-	        <h3>Where to find us</h3>
-	        <div class="column map" id="map"></div>
+			
+			{# <p>{{ site_options.google_map | print_r }}</p> #}
+
+			{% if site_options.google_map %}
+			<div class="acf-map map" id="map">
+				<h3></h3><p></p>
+			</div>
+
 	        <script>
+	        var googleMapsInfo = {{ site_options.google_map | json_encode()}};
+	        var siteInfo = {{ site | json_encode()}};
+	        var lat = Number(googleMapsInfo.lat);
+	        var lng = Number(googleMapsInfo.lng);
+	        var address = googleMapsInfo.address;
+	        var siteTitle = siteInfo.name;
+
+	        var content = "<h4>" + siteTitle + "</h4><p>" + address + "</p>";
+
+
+	        // alert(siteTitle);
+			
 	        function initMap() {
-	            var toomby = {
-	                lat: -19.3149947,
-	                lng: 146.591479
+	            var location = {
+	                lat: lat,
+	                lng: lng
 	            };
 	            var map = new google.maps.Map(document.getElementById('map'), {
 	                zoom: 12,
-	                center: toomby,
+	                center: location,
 	                mapTypeId: 'hybrid',
 	                scrollwheel: false
 	            });
 	            var marker = new google.maps.Marker({
-	                position: toomby,
+	                position: location,
 	                map: map,
 
 	            });
 	            var infowindow = new google.maps.InfoWindow({
-	                content: "<h4>Wonderland Station</h4><p>1486 Hervey Range Road<br> Alice River QLD 4818</p>",
-	                position: toomby,
+	                content: content,
+	                position: location,
 	                map: map
 	            });
 
@@ -86,6 +110,7 @@
 	        }
 	        </script>
 	        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&callback=initMap" async defer></script>
+	    	{% endif %}
 	    </div>
 	</section>
-{% endblock %} #}
+{% endblock %}
