phone number format fix

--- a/themes/toomby/templates/page-contact.twig
+++ b/themes/toomby/templates/page-contact.twig
@@ -50,7 +50,7 @@
 	                <dt>Phone Numbers:</dt>
 	                <dd>				
 					{% for number in site_options.phone_numbers%}
-					<strong>{{number.name}}</strong> {{number.phone}}<br>
+					<strong>{{number.name}}:</strong> {{number.phone}}<br>
 					{% endfor %}
 	                </dd>
 	            	{% endif %}
